# dashboard-project

./: README.md  package.json  planning.md
.github/workflows/: lint-css-files.yml
examples/school-explorer-for-parents/: Data Aspects.md  README.md  pyproject.toml
examples/school-explorer-for-parents/notebooks/: data_exploration.ipynb
examples/school-explorer-for-parents/site/: index.html
examples/school-explorer-for-parents/site/css/: styles.css
examples/school-explorer-for-parents/site/data/: catchments.json
examples/school-explorer-for-parents/site/js/: address-entry.js  function-tools.js  main.js  school-count.js  school-filters.js  school-list.js  school-map.js  template-tools.js
