[tool.poetry]
name = "school-explorer"
version = "0.1.0"
description = ""
authors = ["Mjumbe Poe <mjumbewu@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
geopandas = "^0.11.1"
click = "^8.1.3"
ipykernel = "^6.15.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
